force-app/main/default/objects/APT_Operational_Schedule__c/APT_Operational_Schedule__c.object-meta.xml
<CustomObject>
    <label>Operational Schedule</label>
    <nameField>
        <displayFormat>OS-{00000}</displayFormat>
        <label>Operational Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>