force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Courier_Business_Account_del__c.field-meta.xml
<CustomField>
    <fullName>APT_Courier_Business_Account_del__c</fullName>
    <label>Courier Business Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>