force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_International_Postal__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Postal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Postal</label>
    <type>Checkbox</type>
</CustomField>