force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_IP_Services_Airmail__c.field-meta.xml
<CustomField>
    <fullName>APT_IP_Services_Airmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Services Airmail</label>
    <type>Checkbox</type>
</CustomField>