force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_LPD_Frequency__c.field-meta.xml
<CustomField>
    <fullName>APT_LPD_Frequency__c</fullName>
    <description>Frequency picklist for &apos;Local Pickup and Delivery Services&apos; product only.
The picklist value is dynamically filtered based on differently selected Service Type.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tuesday &amp; Thursday</fullName>
            </value>
            <value>
                <fullName>Monday, Wednesday &amp; Friday</fullName>
            </value>
            <value>
                <fullName>Monday, Tuesday, Wednesday, Thursday &amp; Friday</fullName>
            </value>
            <value>
                <fullName>Ad hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>