force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Minimum_Fees__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Fees__c</fullName>
    <description>If the total Transaction Fees do not exceed the Minimum Fee per annum, the
		Principal shall pay the difference between the total Transaction Fee for the preceding
		twelve (12) month period and the Minimum Fee, on each   anniversary of the Commencement
		Date.</description>
    <inlineHelpText>If the total Transaction Fees do not exceed the Minimum Fee per annum, the
		Principal shall pay the difference between the total Transaction Fee for the preceding
		twelve (12) month period and the Minimum Fee, on each   anniversary of the Commencement
		Date.</inlineHelpText>
    <label>Minimum Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>