force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Minimum_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Monthly_Revenue__c</fullName>
    <inlineHelpText>Minimum revenue is the expected trading levels of your customer per month</inlineHelpText>
    <label>Minimum Monthly Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>