force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Mover_s_Kit_Region__c.field-meta.xml
<CustomField>
    <fullName>APT_Mover_s_Kit_Region__c</fullName>
    <label>Mover’s Kit Region</label>
    <type>TextArea</type>
</CustomField>