force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_MPLR_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>APT_MPLR_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MPLR Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operational Schedules (MPLR Customer Contact)</relationshipLabel>
    <relationshipName>Operational_Schedules5</relationshipName>
    <type>Lookup</type>
</CustomField>