force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Parcel__c.field-meta.xml
<CustomField>
    <fullName>APT_Parcel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parcel</label>
    <type>Checkbox</type>
</CustomField>