force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Parcel_Collection_Points__c.field-meta.xml
<CustomField>
    <fullName>APT_Parcel_Collection_Points__c</fullName>
    <label>Parcel Collection Points</label>
    <type>TextArea</type>
</CustomField>