force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Parcel_Minimum_Collection_Value__c.field-meta.xml
<CustomField>
    <fullName>APT_Parcel_Minimum_Collection_Value__c</fullName>
    <label>Parcel Minimum Collection Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>