force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Parcel_Servic_Receipt_Delivery_Servi__c.field-meta.xml
<CustomField>
    <fullName>APT_Parcel_Servic_Receipt_Delivery_Servi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Parcel Services Receipted Delivery Service</inlineHelpText>
    <label>PS Receipted Delivery Service</label>
    <type>Checkbox</type>
</CustomField>