force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Parcel_Services_Express_eParcel__c.field-meta.xml
<CustomField>
    <fullName>APT_Parcel_Services_Express_eParcel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parcel Services Express eParcel</label>
    <type>Checkbox</type>
</CustomField>