force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Parcels_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Parcels_Commencement_Date__c</fullName>
    <formula>IF(APT_Parcel__c ,  APT_Contract__r.APT_Contract_Start_Date_Display_Template__c ,null)</formula>
    <label>Parcels Commencement Date</label>
    <type>Text</type>
</CustomField>