force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Print_Post_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>APT_Print_Post_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Print Post Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operational Schedules (Print Post Customer Contact)</relationshipLabel>
    <relationshipName>Operational_Schedules2</relationshipName>
    <type>Lookup</type>
</CustomField>