force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Suppress_and_Update__c.field-meta.xml
<CustomField>
    <fullName>APT_Suppress_and_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress and Update</label>
    <type>Checkbox</type>
</CustomField>