force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_Taxi_Truck_services__c.field-meta.xml
<CustomField>
    <fullName>APT_Taxi_Truck_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxi Truck services</label>
    <type>Checkbox</type>
</CustomField>