force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_UMS_Collection_Times__c.field-meta.xml
<CustomField>
    <fullName>APT_UMS_Collection_Times__c</fullName>
    <label>UMS Collection Times</label>
    <type>TextArea</type>
</CustomField>