force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_UMS_Lodgement_Point_Ids__c.field-meta.xml
<CustomField>
    <fullName>APT_UMS_Lodgement_Point_Ids__c</fullName>
    <label>UMS Lodgement Point Ids</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>