force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_UMS_Lodgement_Points__c.field-meta.xml
<CustomField>
    <fullName>APT_UMS_Lodgement_Points__c</fullName>
    <label>UMS Lodgement Points</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>