force-app/main/default/objects/APT_Operational_Schedule__c/fields/APT_UMS_Mode_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>APT_UMS_Mode_of_Booking__c</fullName>
    <label>UMS Mode of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online System</fullName>
            </value>
            <value>
                <fullName>Australia Post Unaddressed Mail Service Team (booking office)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>