force-app/main/default/objects/APT_Operational_Schedule__c/recordTypes/Australia_Post_Parcel_Contract.recordType-meta.xml
<RecordType>
    <fullName>Australia_Post_Parcel_Contract</fullName>
    <active>true</active>
    <description>Operational schedule records to create for contracts under APPC product</description>
    <label>Australia Post Parcel Contract</label>
</RecordType>