force-app/main/default/objects/APT_Operational_Schedule__c/recordTypes/Post_BillPay.recordType-meta.xml
<RecordType>
    <fullName>Post_BillPay</fullName>
    <active>true</active>
    <description>Operational Schedule Record Type used for Post BillPay Contract type of Apttus Contracts</description>
    <label>Post BillPay</label>
</RecordType>