force-app/main/default/objects/APT_Operational_Schedule__c/recordTypes/Startrack.recordType-meta.xml
<RecordType>
    <fullName>Startrack</fullName>
    <active>true</active>
    <description>Operational schedule records to create for contracts under Startrack product</description>
    <label>Startrack</label>
</RecordType>