force-app/main/default/objects/APT_Operational_Schedule__c/recordTypes/Workforce_Verification.recordType-meta.xml
<RecordType>
    <fullName>Workforce_Verification</fullName>
    <active>true</active>
    <label>Workforce Verification</label>
</RecordType>