force-app/main/default/objects/APT_Operational_Schedule__c/validationRules/Cover_Warranty_up_to_300_and_No_Cover.validationRule-meta.xml
<ValidationRule>
    <fullName>Cover_Warranty_up_to_300_and_No_Cover</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(OR(ISPICKVAL(APT_Transit_Warranty_Cover__c, &apos;Automatic Transit Warranty of up to 300$&apos;), ISPICKVAL(APT_Transit_Warranty_Cover__c, &apos;No Cover&apos;)), NOT(ISNULL(APT_Transit_Warranty_Cover_Amount__c))), true, false)</errorConditionFormula>
    <errorDisplayField>APT_Transit_Warranty_Cover_Amount__c</errorDisplayField>
    <errorMessage>You cannot provide Transit Warranty Cover Amount for the selected Transit Warranty Cover option</errorMessage>
</ValidationRule>